fixed line spacings

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -62,6 +62,7 @@ input#subs-email {
   margin-right: 1em;
 }
 #subscribe {
+  margin-top: -60px;
   margin-bottom: -150px;
   .subs-box {
     position: relative;
